--- a/.github/workflows/testFiles.yml
+++ b/.github/workflows/testFiles.yml
@@ -88,37 +88,26 @@ jobs:
         pullRequestOpened: |
           if there are any errors or warnings they will be listed below:
 
-          Errors 🛑:
+          ### `docker-compose.yml`
+          - 🛑 ${{ steps.docker_compose_checks.outputs.IMAGE_ERROR }}
+          - 🛑 ${{ steps.docker_compose_checks.outputs.LATEST_TAG_ERROR }}
+          - 🛑 ${{ steps.docker_compose_checks.outputs.PROXY_AUTH_ERROR }}
 
-          `docker-compose.yml`
-          - ${{ steps.docker_compose_checks.outputs.IMAGE_ERROR }}
-          - ${{ steps.docker_compose_checks.outputs.LATEST_TAG_ERROR }}
-          - ${{ steps.docker_compose_checks.outputs.PROXY_AUTH_ERROR }}
+          ### `umbrel-app.yml`
+          - 🛑 ${{ steps.umbrel_app_checks.outputs.REQUIRED_FIELD_ERROR }}
+          - 🛑 ${{ steps.umbrel_app_checks.outputs.CATEGORY_ERROR }}
+          - ⚠️ ${{ steps.umbrel_app_checks.outputs.OPTIONAL_FIELD_WARNING }}
 
-          `umbrel-app.yml`
-          - ${{ steps.umbrel_app_checks.outputs.REQUIRED_FIELD_ERROR }}
-          - ${{ steps.umbrel_app_checks.outputs.CATEGORY_ERROR }}
-
-          Warnings ⚠️:
-          
-          `umbrel-app.yml`
-          - ${{ steps.umbrel_app_checks.outputs.OPTIONAL_FIELD_WARNING }}
         pullRequestReopened: |
           if there are any errors or warnings they will be listed below:
 
-          Errors 🛑:
+          ### `docker-compose.yml`
+          - 🛑 ${{ steps.docker_compose_checks.outputs.IMAGE_ERROR }}
+          - 🛑 ${{ steps.docker_compose_checks.outputs.LATEST_TAG_ERROR }}
+          - 🛑 ${{ steps.docker_compose_checks.outputs.PROXY_AUTH_ERROR }}
 
-          `docker-compose.yml`
-          - ${{ steps.docker_compose_checks.outputs.IMAGE_ERROR }}
-          - ${{ steps.docker_compose_checks.outputs.LATEST_TAG_ERROR }}
-          - ${{ steps.docker_compose_checks.outputs.PROXY_AUTH_ERROR }}
-
-          `umbrel-app.yml`
-          - ${{ steps.umbrel_app_checks.outputs.REQUIRED_FIELD_ERROR }}
-          - ${{ steps.umbrel_app_checks.outputs.CATEGORY_ERROR }}
-
-          Warnings ⚠️:
-          
-          `umbrel-app.yml`
-          - ${{ steps.umbrel_app_checks.outputs.OPTIONAL_FIELD_WARNING }}
+          ### `umbrel-app.yml`
+          - 🛑 ${{ steps.umbrel_app_checks.outputs.REQUIRED_FIELD_ERROR }}
+          - 🛑 ${{ steps.umbrel_app_checks.outputs.CATEGORY_ERROR }}
+          - ⚠️ ${{ steps.umbrel_app_checks.outputs.OPTIONAL_FIELD_WARNING }}
 
