--- a/.github/workflows/testFiles.yml
+++ b/.github/workflows/testFiles.yml
@@ -63,7 +63,9 @@ jobs:
               fi
             done
             echo $missingFields
-            echo "REQUIRED_FIELD_ERROR=$missingFields these required fields are missing in umbrel-app.yml" >> $GITHUB_OUTPUT
+            if [[ $missingFields != "" ]]; then
+              echo "REQUIRED_FIELD_ERROR=$missingFields these required fields are missing in umbrel-app.yml" >> $GITHUB_OUTPUT
+            fi
 
             CATEGORY=$(grep 'category:' $changed_file | cut -d':' -f2 | tr -d '[:space:]')
             if [[ $CATEGORY != $(echo "$CATEGORY" | tr '[:upper:]' '[:lower:]') ]]; then
@@ -81,7 +83,9 @@ jobs:
               fi
             done
             echo $optionalFieldsMissing
-            echo "OPTIONAL_FIELD_WARNING=$optionalFieldsMissing these optional fields are missing in umbrel-app.yml" >> $GITHUB_OUTPUT
+            if [[ $optionalFieldsMissing != "" ]]; then
+              echo "OPTIONAL_FIELD_WARNING=$optionalFieldsMissing these optional fields are missing in umbrel-app.yml" >> $GITHUB_OUTPUT
+            fi
             echo "$changed_file -> All umbrel app checks passed"
           fi
         done
