--- a/.github/workflows/testFiles.yml
+++ b/.github/workflows/testFiles.yml
@@ -59,7 +59,7 @@ jobs:
             for FIELD in "${REQUIRED_FIELDS[@]}"; do
               if ! grep -q "^$FIELD:" $changed_file ; then
                 echo "::error::Required field $FIELD is missing"
-                missingFields+="`<code>$FIELD</code>, "
+                missingFields+="<code>$FIELD</code>, "
               fi
             done
             echo $missingFields
