--- a/.github/workflows/testFiles.yml
+++ b/.github/workflows/testFiles.yml
@@ -92,45 +92,20 @@ jobs:
       shell: bash
 
     - name: Auto Comment
-      uses: wow-actions/auto-comment@v1
+      uses: actions/github-script@v6
       with:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        pullRequestOpened: |
-          if there are any errors or warnings they will be listed below:
-
-          ### `docker-compose.yml`
-          ${{ steps.docker_compose_checks.outputs.IMAGE_ERROR != '' && '- 🛑 ' || '- ✅ No image errors' }} ${{ steps.docker_compose_checks.outputs.IMAGE_ERROR }}
-          ${{ steps.docker_compose_checks.outputs.LATEST_TAG_ERROR != '' && '- 🛑 ' || '- ✅ No latest tag errors' }} ${{ steps.docker_compose_checks.outputs.LATEST_TAG_ERROR }}
-          ${{ steps.docker_compose_checks.outputs.PROXY_AUTH_ERROR != '' && '- 🛑 ' || '- ✅ No proxy auth errors' }} ${{ steps.docker_compose_checks.outputs.PROXY_AUTH_ERROR }}
-
-          ### `umbrel-app.yml`
-          ${{ steps.umbrel_app_checks.outputs.REQUIRED_FIELD_ERROR != '' && '- 🛑 ' || '- ✅ All required fields present' }} ${{ steps.umbrel_app_checks.outputs.REQUIRED_FIELD_ERROR }}
-          ${{ steps.umbrel_app_checks.outputs.OPTIONAL_FIELD_WARNING != '' && '- ⚠️ ' || '- ✅ All optional fields present' }} ${{ steps.umbrel_app_checks.outputs.OPTIONAL_FIELD_WARNING }}
-          ${{ steps.umbrel_app_checks.outputs.CATEGORY_ERROR != '' && '- 🛑 ' || '- ✅ Category value is lowercase' }} ${{ steps.umbrel_app_checks.outputs.CATEGORY_ERROR }}
-
-        pullRequestReopened: |
-          if there are any errors or warnings they will be listed below:
-
-          ### `docker-compose.yml`
-          ${{ steps.docker_compose_checks.outputs.IMAGE_ERROR != '' && '- 🛑 ' || '- ✅ No image errors' }} ${{ steps.docker_compose_checks.outputs.IMAGE_ERROR }}
-          ${{ steps.docker_compose_checks.outputs.LATEST_TAG_ERROR != '' && '- 🛑 ' || '- ✅ No latest tag errors' }} ${{ steps.docker_compose_checks.outputs.LATEST_TAG_ERROR }}
-          ${{ steps.docker_compose_checks.outputs.PROXY_AUTH_ERROR != '' && '- 🛑 ' || '- ✅ No proxy auth errors' }} ${{ steps.docker_compose_checks.outputs.PROXY_AUTH_ERROR }}
-
-          ### `umbrel-app.yml`
-          ${{ steps.umbrel_app_checks.outputs.REQUIRED_FIELD_ERROR != '' && '- 🛑 ' || '- ✅ All required fields present' }} ${{ steps.umbrel_app_checks.outputs.REQUIRED_FIELD_ERROR }}
-          ${{ steps.umbrel_app_checks.outputs.CATEGORY_ERROR != '' && '- 🛑 ' || '- ✅ Category value is lowercase' }} ${{ steps.umbrel_app_checks.outputs.CATEGORY_ERROR }}
-          ${{ steps.umbrel_app_checks.outputs.OPTIONAL_FIELD_WARNING != '' && '- ⚠️ ' || '- ✅ All optional fields present' }} ${{ steps.umbrel_app_checks.outputs.OPTIONAL_FIELD_WARNING }}
-
-        pullRequestSynchronize: |
-          if there are any errors or warnings they will be listed below:
-
-          ### `docker-compose.yml`
-          ${{ steps.docker_compose_checks.outputs.IMAGE_ERROR != '' && '- 🛑 ' || '- ✅ No image errors' }} ${{ steps.docker_compose_checks.outputs.IMAGE_ERROR }}
-          ${{ steps.docker_compose_checks.outputs.LATEST_TAG_ERROR != '' && '- 🛑 ' || '- ✅ No latest tag errors' }} ${{ steps.docker_compose_checks.outputs.LATEST_TAG_ERROR }}
-          ${{ steps.docker_compose_checks.outputs.PROXY_AUTH_ERROR != '' && '- 🛑 ' || '- ✅ No proxy auth errors' }} ${{ steps.docker_compose_checks.outputs.PROXY_AUTH_ERROR }}
-
-          ### `umbrel-app.yml`
-          ${{ steps.umbrel_app_checks.outputs.REQUIRED_FIELD_ERROR != '' && '- 🛑 ' || '- ✅ All required fields present' }} ${{ steps.umbrel_app_checks.outputs.REQUIRED_FIELD_ERROR }}
-          ${{ steps.umbrel_app_checks.outputs.CATEGORY_ERROR != '' && '- 🛑 ' || '- ✅ Category value is lowercase' }} ${{ steps.umbrel_app_checks.outputs.CATEGORY_ERROR }}
-          ${{ steps.umbrel_app_checks.outputs.OPTIONAL_FIELD_WARNING != '' && '- ⚠️ ' || '- ✅ All optional fields present' }} ${{ steps.umbrel_app_checks.outputs.OPTIONAL_FIELD_WARNING }}
-
+        script: |
+          github.rest.issues.createComment({
+            issue_number: context.issue.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            body: 'if there are any errors or warnings they will be listed below:' +
+            '\n\n### `docker-compose.yml`' +
+            (steps.docker_compose_checks.outputs.IMAGE_ERROR != '' ? '\n- 🛑 ' : '\n- ✅ No image errors') + steps.docker_compose_checks.outputs.IMAGE_ERROR +
+            (steps.docker_compose_checks.outputs.LATEST_TAG_ERROR != '' ? '\n- 🛑 ' : '\n- ✅ No latest tag errors') + steps.docker_compose_checks.outputs.LATEST_TAG_ERROR +
+            (steps.docker_compose_checks.outputs.PROXY_AUTH_ERROR != '' ? '\n- 🛑 ' : '\n- ✅ No proxy auth errors') + steps.docker_compose_checks.outputs.PROXY_AUTH_ERROR +
+            '\n\n### `umbrel-app.yml`' +
+            (steps.umbrel_app_checks.outputs.REQUIRED_FIELD_ERROR != '' ? '\n- 🛑 ' : '\n- ✅ All required fields present') + steps.umbrel_app_checks.outputs.REQUIRED_FIELD_ERROR +
+            (steps.umbrel_app_checks.outputs.CATEGORY_ERROR != '' ? '\n- 🛑 ' : '\n- ✅ Category value is lowercase') + steps.umbrel_app_checks.outputs.CATEGORY_ERROR +
+            (steps.umbrel_app_checks.outputs.OPTIONAL_FIELD_WARNING != '' ? '\n- ⚠️ ' : '\n- ✅ All optional fields present') + steps.umbrel_app_checks.outputs.OPTIONAL_FIELD_WARNING
+          })
